# genai-test

./: .env.example  .gitignore  :  AGENTIC_RAG_GUIDE.md  CLEANUP_AUDIT.md  EXECUTIVE_SUMMARY.md  QUERY_GUIDE.md  README.md  README_EXPERIMENTS.md  RETRIEVAL_EXPLAINED.md  SOLUTION_SUMMARY.md  USAGE.md  answer_pdf_question.py  clear_databases.sh  debug_filtering.py  debug_pdf.py  ef2_component_scores.csv  enhanced_experiment.py  experiment.py  experiment_notebook.ipynb  experiment_runner.py  experiment_runner_enhanced.py  experiments.ipynb  fixed_experiment.py  generate_summaries.py  index_light.py  main.py  pdf_qa_prototype.py  pyproject.toml  query_light.py  query_ollama.py  query_openai.py  query_rag.py  run_experiments.py  run_experiments.sh  run_grid_search.py  score_ef2_components.py  test_ef2_scorer.py  test_memory.py  test_orchestrator.py  (+4 more)
artifacts/: README.md  document_summaries.json  document_summaries_template.json  questions.csv
docs/: DECISIONS.md  README.md  SETUP.md  ab_testing_framework.md  architecture.md  ef2_component_scoring.md  future_refinements.md  pdf_to_markdown_pipeline.md
results/: ab_test_20260128_210315.json  experiment_summary.json  validation_5scenarios_20260128_113555.json
scripts/: convert_artifacts_pdfs.sh  convert_pdfs_to_markdown.py  generate_experiment_summary.py  run_ab_test.py  run_validation_experiment.py  test_5_scenarios.py
src/: __init__.py  base_processor.py  config.py  fast_pdf_processor.py  hybrid_retriever.py  ollama_embedding_processor.py  ollama_processor.py  onnx_processor.py  pdf_processor.py  rag_engine.py  (+3 more)
(+7 files in other folders)
